src/snapshots/crypto_orderbook__array_orderbook__test__bbo.snap
---
source: src/array_orderbook.rs
expression: lob
---
ArrayOrderbook {
    best_bid: Some(
        Level {
            price: 100.0,
            size: 1,
        },
    ),
    best_ask: Some(
        Level {
            price: 100.1,
            size: 1,
        },
    ),
    bids: Buffer {
        buf: [
            Level {
                price: 100.0,
                size: 1,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: -79228162514264337593543950335,
        len: 1,
        cached_first: Some(
            Level {
                price: 100.0,
                size: 1,
            },
        ),
    },
    asks: Buffer {
        buf: [
            Level {
                price: 100.1,
                size: 1,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: 79228162514264337593543950335,
        len: 1,
        cached_first: Some(
            Level {
                price: 100.1,
                size: 1,
            },
        ),
    },
    ts: 10001,
    sequence_id: 0,
    has_moved: false,
}
