src/snapshots/crypto_orderbook__array_orderbook__test__lv2-2.snap
---
source: src/array_orderbook.rs
expression: lob
---
ArrayOrderbook {
    best_bid: Some(
        Level {
            price: 100.0,
            size: 2,
        },
    ),
    best_ask: None,
    bids: Buffer {
        buf: [
            Level {
                price: 100.0,
                size: 2,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: -79228162514264337593543950335,
        len: 1,
        cached_first: Some(
            Level {
                price: 100.0,
                size: 2,
            },
        ),
    },
    asks: Buffer {
        buf: [
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: 79228162514264337593543950335,
        len: 0,
        cached_first: None,
    },
    ts: 10002,
    sequence_id: 0,
    has_moved: false,
}
